<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smsmessaging.MainActivity" >

    <item android:id="@+id/menu_about" 
          android:title="@string/menu_about" 
          android:icon="@drawable/ic_about"
          android:showAsAction="never" />
    
    <item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:icon="@drawable/ic_help"
          android:showAsAction="never" />
    <item android:id="@+id/menu_setting"
          android:title="@string/menu_setting"
          android:icon="@drawable/ic_help"
          android:showAsAction="never" />

    <item android:id="@+id/menu_message_history"
        android:title="@string/menu_message_history"
        android:icon="@drawable/ic_help"
        android:showAsAction="never"></item>
</menu>
